--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,16 @@
 {
   "hosting": [
     {
+      "site": "huconn-57",
       "target": "client",
       "public": "build",
-      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+      "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
   ]
 }
